--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,21 @@ cmake_minimum_required(VERSION 3.5)
 project (dgemm)
 
 # Add an executable
-add_executable(dgemm main.cpp)
+file(GLOB SOURCES src/*.cpp)
+add_executable(dgemm ${SOURCES})
+
+find_package( BLAS REQUIRED )
+include_directories(${BLAS_INCLUDE_DIR} ${LAPACK_INCLUDE_DIR})
+
+
 
 if(CMAKE_CXX_COMPILER_ID MATCHES GNU)
     set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -Wall -Wno-unknown-pragmas -Wno-sign-compare -Woverloaded-virtual -Wwrite-strings -Wno-unused")
     set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g3")
     set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lcblas")
 endif()
+
+TARGET_LINK_LIBRARIES(dgemm m blas ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
+
+# By hand: g++ -std=c++11   main.cpp -lcblas
